# multi-mind

./: .gitignore  README.md  main.py  pyproject.toml
agents/news_agent/: graph.py  main.py
agents/news_agent/nodes/: save_node.py  search_node.py  state.py  summarize_node.py  util.py
common/: datetime.py  logger.py  save_utils.py
models/: ollama.py
outputs/news/news/: news_2025-05-05_03-50-21.md  news_2025-05-05_03-57-45.md  news_2025-05-05_04-05-31.md  news_2025-05-05_04-12-01.md  news_2025-05-05_11-43-54.md  news_2025-05-05_13-26-49.md
outputs/news/이더리움/: news_2025-05-05_03-25-39.md
