[project]
name = "multi-mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain==0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core==0.3.58",
    "langchain-mcp-adapters==0.0.9",
    "langchain-ollama==0.3.2",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.1",
    "langgraph-checkpoint==2.0.25",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.66",
    "langsmith==0.3.42",
    "mcp",
]
